<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingDetailFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_onboarding_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_onboarding_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="194dp"
        android:background="@drawable/bg_chip_radius_20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/tv_onboarding_step1"
        android:textAppearance="@style/body_b14"
        android:textColor="@color/white_FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tv_onboarding_step1_text"
        android:textAppearance="@style/body_r14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_step1" />

    <TextView
        android:id="@+id/tv_onboarding_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:background="@drawable/bg_chip_radius_20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/tv_onboarding_step2"
        android:textAppearance="@style/body_b14"
        android:textColor="@color/white_FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_step1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tv_onboarding_step2_text"
        android:textAppearance="@style/body_r14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_step2" />

    <TextView
        android:id="@+id/tv_onboarding_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:background="@drawable/bg_chip_radius_20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/tv_onboarding_step3"
        android:textAppearance="@style/body_b14"
        android:textColor="@color/white_FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_step2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/tv_onboarding_step3_text"
        android:textAppearance="@style/body_r14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_step3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_onboarding_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rectangle_radius_4dp_gray100"
        android:backgroundTint="@color/purple_9B8AFF"
        android:paddingHorizontal="64dp"
        android:paddingVertical="16dp"
        android:text="@string/btn_onboarding_timetable"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>