<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timeSetting.TimeSettingActivity">

    <ImageView
        android:id="@+id/iv_time_setting_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_time_setting"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray_200_BFBFBF"
        app:layout_constraintTop_toBottomOf="@+id/iv_time_setting_back_button" />

    <TextView
        android:id="@+id/tv_time_setting_title_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_time_setting_title_question"
        android:textAppearance="@style/title_sb20"
        android:textColor="@color/black_000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_time_setting" />

    <TextView
        android:id="@+id/tv_time_setting_title_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_time_setting_title_answer"
        android:textAppearance="@style/body_r16"
        android:textColor="@color/black_000000"
        app:layout_constraintStart_toStartOf="@+id/tv_time_setting_title_question"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_setting_title_question" />

    <TextView
        android:id="@+id/tv_time_setting_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/tv_time_setting_time_start"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/purple_9B8AFF"
        app:layout_constraintStart_toStartOf="@+id/tv_time_setting_title_answer"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_setting_title_answer" />

    <TextView
        android:id="@+id/tv_time_setting_time_input_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rectangle_radius_4dp"
        android:hint="@string/tv_time_setting_time_input_start"
        android:padding="16dp"
        android:textAppearance="@style/body_r14"
        android:textColor="@color/gray_400_7E7E7E"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_setting_hour_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_setting_time_start" />

    <TextView
        android:id="@+id/tv_time_setting_hour_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_time_setting_hour_unit"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/black_000000"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_setting_time_input_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_time_setting_time_input_start" />

    <TextView
        android:id="@+id/tv_time_setting_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_time_setting_time_end"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/purple_9B8AFF"
        app:layout_constraintStart_toStartOf="@+id/tv_time_setting_time_input_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_setting_time_input_start" />

    <TextView
        android:id="@+id/tv_time_setting_time_input_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_rectangle_radius_4dp"
        android:hint="@string/tv_time_setting_time_input_end"
        android:padding="16dp"
        android:textAppearance="@style/body_r14"
        android:textColor="@color/gray_400_7E7E7E"
        app:layout_constraintEnd_toStartOf="@+id/tv_time_setting_hour_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_setting_time_end" />


    <TextView
        android:id="@+id/tv_time_setting_hour_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_time_setting_hour_unit"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/black_000000"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time_setting_time_input_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_time_setting_time_input_end" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_time_setting_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rectangle_radius_5dp"
        android:paddingVertical="12dp"
        android:text="@string/btn_time_setting_next"
        android:textAppearance="@style/body_b16"
        android:textColor="@color/white_FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>